--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "csv-loader": "^3.0.2",
     "file-loader": "^2.0.0",
     "style-loader": "^0.23.1",
+    "webpack-dev-server": "^3.1.10",
     "xml-loader": "^1.2.1"
   }
 }
